# edtech-agents

./: Dockerfile  README.md  pyproject.toml
app/: main.py
app/api/: routes.py
app/llm/: planner.py
app/routes/: gallery.py
app/templates/: gallery.html  index.html
app/websocket/: server.py
student-chrome-extension/: background.js  manifest.json  options.html  options.js  popup.html  popup.js  server.html  server.js
student-mcp-server/: mcp_server.py  pyproject.toml
student-mcp-server/app/: main.py
student-mcp-server/app/api/: routes.py
student-mcp-server/app/models/: schema.py
student-mcp-server/app/static/: index.html
student-mcp-server/app/websocket/: server.py
teacher-service/: .dockerignore  Dockerfile
teacher-service/app/api/: routes.py
teacher-service/app/llm/: planner.py
teacher-service/app/models/: schema.py
teacher-service/app/templates/: index.html
teacher-service/app/websocket/: server.py
teacher-service/context/: khan.json
