[project]
name = "teacher-service"
version = "0.1.0"
description = "Student MCP Server for WebSocket communication"
requires-python = ">=3.12"
dependencies = [
    "websockets>=12.0",
    "aioconsole>=0.6.1",
    "fastapi>=0.95.1",
    "uvicorn>=0.22.0",
    "python-multipart>=0.0.6",
    "Jinja2>=3.1.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "python-dotenv>=0.20.0",
    "langchain-tavily>=0.1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uvicorn]
host = "0.0.0.0"
port = 3000
reload = true
