[project]
name = "student-mcp-server"
version = "0.1.0"
description = "Student MCP Server for WebSocket communication"
requires-python = ">=3.8"
dependencies = [
    "websockets>=12.0",
    "aioconsole>=0.6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
pip = ">=23.3.2" 